Added loadout controller test. Added base test class to perform startup and cleanup after each test.